# webspace-sync

./: .pre-commit-config.yaml  AGENTS.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: bandit.yml  lint.yml  mypy.yml  tests.yml
src/webspace_sync/: __init__.py  client.py
tests/: test_client.py
