[project]
name = "webspace-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kugeleis", email = "9948777+Kugeleis@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
webspace-sync = "webspace_sync:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
